tests/fail/a.rs
use wgpu_shader_checker::include_wgsl_checked;

fn main() {
    include_wgsl_checked!("uwu");
}
